🐛 Fix out of bounds error if Compositions sections are nested